Add switching implementation using interface