@@ -3,16 +3,15 @@ package com.almeralmazan.springbootmasterclass.customer;
 import org.springframework.context.annotation.Primary;
 import org.springframework.stereotype.Repository;
 
-import java.util.Collections;
 import java.util.List;
 
-@Repository
-@Primary
-public class CustomerRepository implements CustomerRepo {
+@Repository(value = "fake")
+public class CustomFakeRepository implements CustomerRepo {
     @Override
     public List<Customer> getAllCustomers() {
-        return Collections.singletonList(
-                new Customer(1L, "TODO: Implement real db")
+        return List.of(
+                new Customer(1L, "Almer Leo Almazan"),
+                new Customer(2L, "Liezel Almazan")
         );
     }
 }
